--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
   <title>Sua Página</title>
   <style>
     /* CSS para layout responsivo */
+    body {
+      background-color: #0e0e10; /* Cor de fundo semelhante ao Twitch */
+      color: #fff; /* Cor de texto semelhante ao Twitch */
+      font-family: Arial, sans-serif; /* Fonte semelhante ao Twitch */
+    }
+
     .container {
       display: flex;
       flex-wrap: wrap;
+      gap: 1rem; /* Espaçamento entre os elementos */
     }
+
     .video-container, .chat-container {
       flex: 1 0 50%;
+      border-radius: 1rem; /* Bordas arredondadas */
+      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15); /* Sombra sutil */
+      overflow: hidden; /* Esconder o conteúdo que excede as bordas arredondadas */
     }
+
+    .video-container iframe, .chat-container iframe {
+      width: 100%;
+      height: 100%;
+    }
+
     @media (max-width: 600px) {
       .video-container, .chat-container {
         flex: 1 0 100%;
@@ -28,7 +45,5 @@
         <script id="cid0020000348427132850" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"hardstream","arch":"js","styles":{"a":"707070","b":100,"c":"FFFFFF","d":"FFFFFF","k":"707070","l":"707070","m":"707070","n":"FFFFFF","p":"10","q":"707070","r":100,"t":0,"usricon":0,"surl":0,"cnrs":"0.35","fwtickm":1}}</script>
     </div>
   </div>
-  
-  <!-- Insira seu script JS aqui, se necessário -->
 </body>
 </html>
