--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1rem; /* Espaçamento entre os elementos */
+      height: 100vh; /* Definir altura total da janela */
     }
 
     .video-container, .chat-container {
-      flex: 1 0 50%;
+      flex: 1 1 50%;
       border-radius: 1rem; /* Bordas arredondadas */
       box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15); /* Sombra sutil */
       overflow: hidden; /* Esconder o conteúdo que excede as bordas arredondadas */
+      height: 100%; /* Preencher a altura total */
     }
 
     .video-container iframe, .chat-container iframe {
@@ -30,7 +32,7 @@
 
     @media (max-width: 600px) {
       .video-container, .chat-container {
-        flex: 1 0 100%;
+        flex: 1 1 100%;
       }
     }
   </style>
@@ -42,7 +44,7 @@
       <iframe title="Player" width="100%" height="100%" marginheight="0" marginwidth="0" frameborder="0" allow="autoplay; fullscreen" allowtransparency="true" allowfullscreen="" src="https://player.angelthump.com/?channel=squeej" scrolling="no" seamless=""></iframe>
     </div>
     <div class="chat-container">
-        <script id="cid0020000348427132850" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"hardstream","arch":"js","styles":{"a":"707070","b":100,"c":"FFFFFF","d":"FFFFFF","k":"707070","l":"707070","m":"707070","n":"FFFFFF","p":"10","q":"707070","r":100,"t":0,"usricon":0,"surl":0,"cnrs":"0.35","fwtickm":1}}</script>
+      <script id="cid0020000348427132850" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"hardstream","arch":"js","styles":{"a":"707070","b":100,"c":"FFFFFF","d":"FFFFFF","k":"707070","l":"707070","m":"707070","n":"FFFFFF","p":"10","q":"707070","r":100,"t":0,"usricon":0,"surl":0,"cnrs":"0.35","fwtickm":1}}</script>
     </div>
   </div>
 </body>
