--- a/index.html
+++ b/index.html
@@ -8,32 +8,31 @@
       background-color: #0e0e10; /* Cor de fundo semelhante ao Twitch */
       color: #fff; /* Cor de texto semelhante ao Twitch */
       font-family: Arial, sans-serif; /* Fonte semelhante ao Twitch */
+      margin: 0; /* Remover margens padrão do body */
+      overflow: hidden; /* Remover barras de rolagem */
     }
 
     .container {
       display: flex;
-      flex-wrap: wrap;
-      gap: 1rem; /* Espaçamento entre os elementos */
       height: 100vh; /* Definir altura total da janela */
     }
 
     .video-container, .chat-container {
-      flex: 1 1 50%;
-      border-radius: 1rem; /* Bordas arredondadas */
-      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15); /* Sombra sutil */
-      overflow: hidden; /* Esconder o conteúdo que excede as bordas arredondadas */
+      flex: 1;
       height: 100%; /* Preencher a altura total */
+    }
+
+    .video-container {
+      width: 80%; /* Vídeo ocupa 80% da largura */
+    }
+
+    .chat-container {
+      width: 20%; /* Chat ocupa 20% da largura */
     }
 
     .video-container iframe, .chat-container iframe {
       width: 100%;
       height: 100%;
-    }
-
-    @media (max-width: 600px) {
-      .video-container, .chat-container {
-        flex: 1 1 100%;
-      }
     }
   </style>
 </head>
