--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sua Página</title>
+  <title>Teste 1</title>
   <style>
     /* CSS para layout responsivo */
     body {
@@ -18,16 +18,15 @@
     }
 
     .video-container, .chat-container {
-      flex: 1;
       height: 100%; /* Preencher a altura total */
     }
 
     .video-container {
-      width: 80%; /* Vídeo ocupa 80% da largura */
+      width: 90%; /* Vídeo ocupa 90% da largura */
     }
 
     .chat-container {
-      width: 20%; /* Chat ocupa 20% da largura */
+      width: 10%; /* Chat ocupa 10% da largura */
     }
 
     .video-container iframe, .chat-container iframe {
