--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Teste 1</title>
+  <title>hard br</title>
   <style>
     /* CSS para layout responsivo */
     body {
@@ -42,7 +42,7 @@
       <iframe title="Player" width="100%" height="100%" marginheight="0" marginwidth="0" frameborder="0" allow="autoplay; fullscreen" allowtransparency="true" allowfullscreen="" src="https://player.angelthump.com/?channel=squeej" scrolling="no" seamless=""></iframe>
     </div>
     <div class="chat-container">
-      <script id="cid0020000348427132850" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 100%;height: 100%;">{"handle":"hardstream","arch":"js","styles":{"a":"707070","b":100,"c":"FFFFFF","d":"FFFFFF","k":"707070","l":"707070","m":"707070","n":"FFFFFF","p":"10","q":"707070","r":100,"t":0,"usricon":0,"surl":0,"cnrs":"0.35","fwtickm":1}}</script>
+        <div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
     </div>
   </div>
 </body>
