--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="http://tlk.io/embed.js" type="text/javascript"></script>
+<div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
