--- a/index.html
+++ b/index.html
@@ -33,10 +33,39 @@
       width: 100%;
       height: 100%;
     }
+
+    /* Botão de controle do chat */
+    .chat-toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 100px;
+      height: 40px;
+      background-color: red;
+      color: white;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+
+    .chat-toggle.hidden {
+      background-color: green;
+    }
+
+    .chat-toggle.hidden .icon {
+      content: '\2713'; /* Código do caractere de check */
+      margin-right: 5px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
+    <div class="chat-toggle" onclick="toggleChat()">
+        <span class="icon">X</span>
+        Fechar
+      </div>
     <div class="video-container">
       <!-- Substitua URL_DO_VIDEO pelo URL do vídeo que você deseja incorporar -->
       <iframe title="Player" width="100%" height="100%" marginheight="0" marginwidth="0" frameborder="0" allow="autoplay; fullscreen" allowtransparency="true" allowfullscreen="" src="https://player.angelthump.com/?channel=squeej" scrolling="no" seamless=""></iframe>
@@ -45,5 +74,21 @@
         <div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
     </div>
   </div>
+  <script>
+    // Função para alternar a visibilidade do chat
+    function toggleChat() {
+      var chatContainer = document.querySelector('.chat-container');
+      var chatToggle = document.querySelector('.chat-toggle');
+
+      chatContainer.classList.toggle('hidden');
+      chatToggle.classList.toggle('hidden');
+
+      if (chatContainer.classList.contains('hidden')) {
+        chatToggle.innerHTML = '<span class="icon">&#10003;</span>Abrir';
+      } else {
+        chatToggle.innerHTML = '<span class="icon">X</span>Fechar';
+      }
+    }
+  </script>
 </body>
 </html>
