--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="chat-toggle" onclick="toggleChat()">
-        <span class="icon">X</span>
-        Fechar
-      </div>
+    
     <div class="video-container">
       <!-- Substitua URL_DO_VIDEO pelo URL do vídeo que você deseja incorporar -->
       <iframe title="Player" width="100%" height="100%" marginheight="0" marginwidth="0" frameborder="0" allow="autoplay; fullscreen" allowtransparency="true" allowfullscreen="" src="https://player.angelthump.com/?channel=squeej" scrolling="no" seamless=""></iframe>
@@ -73,6 +70,10 @@
     <div class="chat-container">
         <div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
     </div>
+  </div>
+  <div class="chat-toggle" onclick="toggleChat()">
+    <span class="icon">X</span>
+    - Fechar
   </div>
   <script>
     // Função para alternar a visibilidade do chat
@@ -84,7 +85,7 @@
       chatToggle.classList.toggle('hidden');
 
       if (chatContainer.classList.contains('hidden')) {
-        chatToggle.innerHTML = '<span class="icon">&#10003;</span>Abrir';
+        chatToggle.innerHTML = '<span class="icon">&#10003;</span> - Abrir';
       } else {
         chatToggle.innerHTML = '<span class="icon">X</span>Fechar';
       }
