--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>hard br</title>
+  <title>hard br 1</title>
   <style>
     /* CSS para layout responsivo */
     body {
@@ -16,16 +16,13 @@
       height: 100vh; /* Definir altura total da janela */
     }
 
-    .video-container, .chat-container {
-      height: 100%; /* Preencher a altura total */
-    }
-
     .video-container {
-      width: 90%; /* Vídeo ocupa 90% da largura */
+      width: 100%; /* Vídeo ocupa 100% da largura */
     }
 
     .chat-container {
-      width: 20%; /* Chat ocupa 10% da largura */
+      width: 0; /* Chat ocupa 0% da largura */
+      overflow: hidden; /* Ocultar conteúdo do chat */
     }
 
     .video-container iframe, .chat-container iframe {
@@ -77,14 +74,19 @@
     // Função para alternar a visibilidade do chat
     function toggleChat() {
       var chatContainer = document.querySelector('.chat-container');
+      var videoContainer = document.querySelector('.video-container');
       var chatToggle = document.querySelector('.chat-toggle');
 
       chatContainer.classList.toggle('hidden');
       chatToggle.classList.toggle('hidden');
 
       if (chatContainer.classList.contains('hidden')) {
+        videoContainer.style.width = '100%';
+        chatContainer.style.width = '0';
         chatToggle.innerHTML = '<span class="icon">&#10003;</span> - Abrir';
       } else {
+        videoContainer.style.width = '90%';
+        chatContainer.style.width = '20%';
         chatToggle.innerHTML = '<span class="icon">X</span> - Fechar';
       }
     }
