chat aparecendo no inicio

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     .video-container {
       width: 100%; /* Vídeo ocupa 100% da largura */
     }
+    
 
     .chat-container {
-      width: 0; /* Chat ocupa 0% da largura */
+      width: 20%; /* Chat ocupa 0% da largura */
       overflow: hidden; /* Ocultar conteúdo do chat */
     }
 
@@ -67,7 +68,7 @@
     </div>
   </div>
   <div class="chat-toggle" onclick="toggleChat()">
-    <span class="icon">X</span>
+    <span class="icon">X </span>
     - Fechar
   </div>
   <script>
