--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   <div class="container">
     <div class="video-container">
       <!-- Substitua URL_DO_VIDEO pelo URL do vídeo que você deseja incorporar -->
-      <iframe title="Player" width="100%" height="100%" marginheight="0" marginwidth="0" frameborder="0" allow="autoplay; fullscreen" allowtransparency="true" allowfullscreen="" src="https://player.angelthump.com/?channel=harbr" scrolling="no" seamless=""></iframe>
+      <iframe type="text/html" width="100%" height="100%" src="https://player.trovo.live/embed/player?streamername=Rezumay&autoplay=1" frameborder="0" allowfullscreen>
+
     </div>
     <div class="chat-container">
         <div id="tlkio" data-channel="hardstream" data-theme="theme--night" style="width:100%;height:100%;"></div><script async src="https://tlk.io/embed.js" type="text/javascript"></script>
